# i-Teams

./: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: cc-reporter.yml  django.yml
rooky_teams/: asgi.py  mixins.py  settings.py  urls.py  wsgi.py
rooky_teams/lineups/: admin.py  apps.py  models.py
rooky_teams/matches/: admin.py  apps.py  db_queries.py  forms.py  models.py  urls.py  views.py
rooky_teams/matches/migrations/: 0001_initial.py  0002_match_team_1_goals_match_team_2_goals.py  0003_match_description.py  0004_alter_match_team_1_goals_alter_match_team_2_goals.py  0005_alter_match_team_1_goals_alter_match_team_2_goals.py  0006_alter_match_team_1_goals_alter_match_team_2_goals.py  0007_alter_match_team_1_goals_alter_match_team_2_goals.py  0008_alter_match_description_alter_match_match_date.py  0009_alter_match_description.py
rooky_teams/players/: admin.py  apps.py  db_queries.py  filters.py  forms.py  models.py  tools.py  urls.py  views.py
rooky_teams/players/migrations/: 0001_initial.py  0002_alter_player_def_skill_alter_player_frw_skill_and_more.py  0002_rename_gk_skill_player_skill_remove_player_def_skill_and_more.py  0003_alter_player_role.py  0003_rename_skill_player_gk_skill_player_def_skill_and_more.py  (+1 more)
rooky_teams/roles/: admin.py  apps.py  models.py
rooky_teams/roster/: apps.py  models.py  urls.py  views.py
rooky_teams/skills/: admin.py  apps.py  models.py
rooky_teams/templates/: footer.html  home.html  navbar.html
rooky_teams/templates/matches/: index.html  (+3 more)
rooky_teams/tests/: __init__.py  test_main_page.py
(+33 files in other folders)
