[tool.poetry]
name = "rookyteams"
version = "0.1.0"
description = ""
authors = ["ai_gelios <ai_gelios@mail.ru>"]
readme = "README.md"
packages = [{include = 'rooky_teams'}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
dj-database-url = "^2.1.0"
django-bootstrap5 = "^23.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
